<resources>
    <string name="app_name">Projekat</string>
    <string name="password">Enter password</string>
    <string name="login">Log In</string>
    <string name="not_registered">Haven\'t registered yet?</string>
    <string name="click_to_signup">Click here to signup.</string>
    <string name="username">Enter username</string>
    <string name="firstname">Enter first name</string>
    <string name="lastname">Enter last name</string>
    <string name="phone">Enter phone number</string>
    <string name="signup">Sign Up</string>
    <string name="new_object">Add new object here</string>
    <string name="show_all_users">Show All Users</string>
    <string name="add_friends">Add Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="visibility">Visibility</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices:</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="cancel">cancel</string>
    <string name="finish">finish</string>
</resources>